--- a/dumbhippo/trunk/client/windows/HippoExplorer/HippoExplorer.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoExplorer/HippoExplorer.vcproj
@@ -1,253 +1,358 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.10"
+	Version="8.00"
 	Name="HippoExplorer"
 	ProjectGUID="{5EE19538-0578-4199-93DD-E77F11A060E4}"
-	Keyword="Win32Proj">
+	Keyword="Win32Proj"
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="../Debug"
 			IntermediateDirectory="Debug"
 			ConfigurationType="2"
-			CharacterSet="2">
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				AdditionalIncludeDirectories="../HippoUtil"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="../HippoUtil;../../common/hippoipc;../HippoIpc"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;NOMINMAX"
-				MinimalRebuild="TRUE"
+				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
-				TreatWChar_tAsBuiltInType="TRUE"
-				ForceConformanceInForLoopScope="TRUE"
-				UsePrecompiledHeader="3"
+				TreatWChar_tAsBuiltInType="true"
+				ForceConformanceInForLoopScope="true"
+				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx-hippoexplorer.h"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="4"/>
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="4"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLinkerTool"
-				RegisterOutput="TRUE"
+				RegisterOutput="true"
 				AdditionalDependencies="wininet.lib advapi32.lib gdi32.lib"
 				OutputFile="$(OutDir)/HippoExplorer.dll"
 				LinkIncremental="2"
 				ModuleDefinitionFile="HippoExplorer.def"
-				GenerateDebugInformation="TRUE"
+				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/HippoExplorer.pdb"
 				SubSystem="2"
-				TargetMachine="1"/>
+				TargetMachine="1"
+			/>
 			<Tool
-				Name="VCMIDLTool"
-				AdditionalIncludeDirectories="../HippoUtil"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCAppVerifierTool"
+			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"/>
+				Name="VCWebDeploymentTool"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
-			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
-			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="Release"
 			IntermediateDirectory="Release"
 			ConfigurationType="1"
-			CharacterSet="2">
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
-				RuntimeLibrary="4"
-				UsePrecompiledHeader="3"
+				RuntimeLibrary="0"
+				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx-hippoexplorer.h"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="3"/>
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="3"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLinkerTool"
 				OutputFile="$(OutDir)/HippoExplorer.exe"
 				LinkIncremental="1"
-				GenerateDebugInformation="TRUE"
+				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				TargetMachine="1"/>
+				TargetMachine="1"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCAppVerifierTool"
+			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"/>
+				Name="VCWebDeploymentTool"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
-			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
-			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 	</Configurations>
 	<References>
 		<ProjectReference
 			ReferencedProjectIdentifier="{638E7547-B5E8-49AD-A70B-56E333C216FE}"
-			Name="HippoUtil"/>
+		/>
 	</References>
 	<Files>
 		<Filter
 			Name="Source Files"
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
-			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
+			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
+			>
 			<File
-				RelativePath=".\ClassFactory.cpp">
+				RelativePath=".\ClassFactory.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoControl.cpp">
+				RelativePath=".\HippoControl.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoEmbed.cpp">
+				RelativePath=".\HippoEmbed.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoExplorer.cpp">
+				RelativePath=".\HippoExplorer.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoExplorer.def">
+				RelativePath=".\HippoExplorer.def"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoExplorer.idl">
+				RelativePath=".\HippoExplorer.idl"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoExplorerBar.cpp">
+				RelativePath=".\HippoExplorerBar.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoExplorerUtil.cpp">
+				RelativePath=".\HippoExplorerUtil.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoToolbarAction.cpp">
+				RelativePath=".\HippoToolbarAction.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoTracker.cpp">
+				RelativePath=".\HippoTracker.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoTrackerUpdater.cpp">
+				RelativePath=".\HippoTrackerUpdater.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoUILauncher.cpp">
+				RelativePath=".\HippoUILauncher.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\stdafx.cpp">
+				RelativePath=".\stdafx.cpp"
+				>
 				<FileConfiguration
-					Name="Debug|Win32">
+					Name="Debug|Win32"
+					>
 					<Tool
 						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="1"/>
+						UsePrecompiledHeader="1"
+					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release|Win32">
+					Name="Release|Win32"
+					>
 					<Tool
 						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="1"/>
+						UsePrecompiledHeader="1"
+					/>
 				</FileConfiguration>
 			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
-			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
+			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
+			>
 			<File
-				RelativePath=".\ClassFactory.h">
+				RelativePath=".\ClassFactory.h"
+				>
 			</File>
 			<File
 				RelativePath=".\EmbedTest.htm"
-				DeploymentContent="TRUE">
+				DeploymentContent="true"
+				>
 			</File>
 			<File
-				RelativePath=".\Globals.h">
+				RelativePath=".\Globals.h"
+				>
 			</File>
 			<File
-				RelativePath=".\Guid.h">
+				RelativePath=".\Guid.h"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoControl.h">
+				RelativePath=".\HippoControl.h"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoEmbed.h">
+				RelativePath=".\HippoEmbed.h"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoExplorerBar.h">
+				RelativePath=".\HippoExplorerBar.h"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoExplorerDispID.h">
+				RelativePath=".\HippoExplorerDispID.h"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoExplorerUtil.h">
+				RelativePath=".\HippoExplorerUtil.h"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoToolbarAction.h">
+				RelativePath=".\HippoToolbarAction.h"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoTracker.h">
+				RelativePath=".\HippoTracker.h"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoTrackerUpdater.h">
+				RelativePath=".\HippoTrackerUpdater.h"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoUILauncher.h">
+				RelativePath=".\HippoUILauncher.h"
+				>
 			</File>
 			<File
-				RelativePath=".\Resource.h">
+				RelativePath=".\Resource.h"
+				>
 			</File>
 			<File
-				RelativePath=".\stdafx-hippoexplorer.h">
+				RelativePath=".\stdafx-hippoexplorer.h"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx"
-			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}">
+			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
+			>
 			<File
-				RelativePath=".\DumbHippo.ico">
+				RelativePath=".\DumbHippo.ico"
+				>
 			</File>
 			<File
-				RelativePath=".\DumbHippoHot.ico">
+				RelativePath=".\DumbHippoHot.ico"
+				>
 			</File>
 			<File
-				RelativePath=".\HippoExplorer.rc">
+				RelativePath=".\HippoExplorer.rc"
+				>
 				<FileConfiguration
-					Name="Debug|Win32">
+					Name="Debug|Win32"
+					>
 					<Tool
 						Name="VCResourceCompilerTool"
-						AdditionalIncludeDirectories="$(IntDir)"/>
+						AdditionalIncludeDirectories="$(IntDir)"
+					/>
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\linkswarmbig.ico">
+				RelativePath=".\linkswarmbig.ico"
+				>
 			</File>
 		</Filter>
 	</Files>
