--- a/dumbhippo/trunk/client/windows/HippoFirefoxExtension/HippoFirefoxExtension.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoFirefoxExtension/HippoFirefoxExtension.vcproj
@@ -1,44 +1,68 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.10"
+	Version="8.00"
 	Name="HippoFirefoxExtension"
 	ProjectGUID="{953B4EEF-CD4D-443C-97CC-7ABEE71EAB1F}"
-	Keyword="MakeFileProj">
+	Keyword="MakeFileProj"
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="Debug"
 			IntermediateDirectory="Debug"
-			ConfigurationType="0">
+			ConfigurationType="0"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			>
 			<Tool
 				Name="VCNMakeTool"
 				BuildCommandLine="nmake OUTDIR=..\Debug all"
 				ReBuildCommandLine="nmake OUTDIR=..\Debug clean all"
 				CleanCommandLine="nmake OUTDIR=..\Debug clean"
-				Output="HippoFirefoxExtension.exe"/>
+				Output="HippoFirefoxExtension.exe"
+				PreprocessorDefinitions=""
+				IncludeSearchPath=""
+				ForcedIncludes=""
+				AssemblySearchPath=""
+				ForcedUsingAssemblies=""
+				CompileAsManaged=""
+			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="Release"
 			IntermediateDirectory="Release"
-			ConfigurationType="0">
+			ConfigurationType="0"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			>
 			<Tool
 				Name="VCNMakeTool"
 				BuildCommandLine="make"
+				ReBuildCommandLine=""
 				CleanCommandLine="make clean"
-				Output="HippoFirefoxExtension.exe"/>
+				Output="HippoFirefoxExtension.exe"
+				PreprocessorDefinitions=""
+				IncludeSearchPath=""
+				ForcedIncludes=""
+				AssemblySearchPath=""
+				ForcedUsingAssemblies=""
+				CompileAsManaged=""
+			/>
 		</Configuration>
 	</Configurations>
 	<References>
 	</References>
 	<Files>
 		<File
-			RelativePath=".\Makefile">
+			RelativePath=".\Makefile"
+			>
 		</File>
 	</Files>
 	<Globals>
