--- a/dumbhippo/trunk/client/windows/dependencies/dependencies.vcproj
+++ b/dumbhippo/trunk/client/windows/dependencies/dependencies.vcproj
@@ -1,33 +1,60 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.10"
+	Version="8.00"
 	Name="dependencies"
 	ProjectGUID="{923DC368-46A9-4977-B827-75797CC259E3}"
-	Keyword="MakeFileProj">
+	Keyword="MakeFileProj"
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="Debug"
 			IntermediateDirectory="Debug"
-			ConfigurationType="0">
+			ConfigurationType="0"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			>
 			<Tool
 				Name="VCNMakeTool"
 				BuildCommandLine="nmake OUTDIR=..\Debug all"
 				ReBuildCommandLine="nmake OUTDIR=..\Debug clean all"
-				CleanCommandLine="nmake OUTDIR=..\Debug clean"/>
+				CleanCommandLine="nmake OUTDIR=..\Debug clean"
+				Output=""
+				PreprocessorDefinitions=""
+				IncludeSearchPath=""
+				ForcedIncludes=""
+				AssemblySearchPath=""
+				ForcedUsingAssemblies=""
+				CompileAsManaged=""
+			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="Release"
 			IntermediateDirectory="Release"
-			ConfigurationType="0">
+			ConfigurationType="0"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			>
 			<Tool
-				Name="VCNMakeTool"/>
+				Name="VCNMakeTool"
+				BuildCommandLine=""
+				ReBuildCommandLine=""
+				CleanCommandLine=""
+				Output=""
+				PreprocessorDefinitions=""
+				IncludeSearchPath=""
+				ForcedIncludes=""
+				AssemblySearchPath=""
+				ForcedUsingAssemblies=""
+				CompileAsManaged=""
+			/>
 		</Configuration>
 	</Configurations>
 	<References>
@@ -35,68 +62,86 @@
 	<Files>
 		<Filter
 			Name="DLLs"
-			Filter="">
+			>
 			<File
 				RelativePath=".\asprintf.dll"
-				DeploymentContent="TRUE">
+				DeploymentContent="true"
+				>
 			</File>
 			<File
 				RelativePath=".\charset.dll"
-				DeploymentContent="TRUE">
+				DeploymentContent="true"
+				>
 			</File>
 			<File
 				RelativePath=".\iconv.dll"
-				DeploymentContent="TRUE">
+				DeploymentContent="true"
+				>
 			</File>
 			<File
 				RelativePath=".\intl.dll"
-				DeploymentContent="TRUE">
+				DeploymentContent="true"
+				>
 			</File>
 			<File
-				RelativePath=".\libcairo-2.dll">
+				RelativePath=".\libcairo-2.dll"
+				>
 			</File>
 			<File
 				RelativePath=".\libglib-2.0-0.dll"
-				DeploymentContent="TRUE">
+				DeploymentContent="true"
+				>
 			</File>
 			<File
-				RelativePath=".\libgmodule-2.0-0.dll">
+				RelativePath=".\libgmodule-2.0-0.dll"
+				>
 			</File>
 			<File
-				RelativePath=".\libgobject-2.0-0.dll">
+				RelativePath=".\libgobject-2.0-0.dll"
+				>
 			</File>
 			<File
 				RelativePath=".\libgthread-2.0-0.dll"
-				DeploymentContent="TRUE">
+				DeploymentContent="true"
+				>
 			</File>
 			<File
-				RelativePath=".\libpango-1.0-0.dll">
+				RelativePath=".\libpango-1.0-0.dll"
+				>
 			</File>
 			<File
-				RelativePath=".\libpangocairo-1.0-0.dll">
+				RelativePath=".\libpangocairo-1.0-0.dll"
+				>
 			</File>
 			<File
-				RelativePath=".\libpangowin32-1.0-0.dll">
+				RelativePath=".\libpangowin32-1.0-0.dll"
+				>
 			</File>
 			<File
-				RelativePath=".\libpng13.dll">
+				RelativePath=".\libpng13.dll"
+				>
 			</File>
 			<File
-				RelativePath=".\zlib1.dll">
+				RelativePath=".\zlib1.dll"
+				>
 			</File>
 		</Filter>
 		<File
 			RelativePath=".\COPYING.txt"
-			DeploymentContent="TRUE">
+			DeploymentContent="true"
+			>
 		</File>
 		<File
-			RelativePath=".\Makefile">
+			RelativePath=".\Makefile"
+			>
 		</File>
 		<File
-			RelativePath=".\Manifest">
+			RelativePath=".\Manifest"
+			>
 		</File>
 		<File
-			RelativePath=".\README.txt">
+			RelativePath=".\README.txt"
+			>
 		</File>
 	</Files>
 	<Globals>
