--- a/dumbhippo/trunk/client/windows/loudmouth/loudmouth.vcproj
+++ b/dumbhippo/trunk/client/windows/loudmouth/loudmouth.vcproj
@@ -1,35 +1,65 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.10"
+	Version="8.00"
 	Name="loudmouth"
 	ProjectGUID="{E02F6EA7-65C3-4D2A-919F-D022D6C26DFA}"
-	Keyword="Win32Proj">
+	Keyword="Win32Proj"
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="../Debug"
 			IntermediateDirectory="Debug"
 			ConfigurationType="2"
-			CharacterSet="2">
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+				CommandLine="copy ..\..\common\loudmouth\win32-config.h ..\..\common\loudmouth\config.h"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories=".;../dependencies/gettext/include;../dependencies/glib/include/glib-2.0;../dependencies/glib/lib/glib-2.0/include;../../common/loudmouth"
 				PreprocessorDefinitions="__WIN32__;LM_COMPILATION;HAVE_CONFIG_H;WIN32;_DEBUG;_WINDOWS;_USRDLL;LOUDMOUTH_EXPORTS"
-				MinimalRebuild="TRUE"
+				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="4"/>
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="4"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/VERBOSE:LIB"
@@ -38,80 +68,114 @@
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="../dependencies/gettext/lib;../dependencies/glib/lib"
 				ModuleDefinitionFile="../../common/loudmouth/loudmouth/loudmouth.def"
-				GenerateDebugInformation="TRUE"
+				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/loudmouth.pdb"
 				SubSystem="2"
 				ImportLibrary="$(OutDir)/loudmouth.lib"
-				TargetMachine="1"/>
+				TargetMachine="1"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"
-				CommandLine="copy ..\..\common\loudmouth\win32-config.h ..\..\common\loudmouth\config.h"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCAppVerifierTool"
+			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"/>
+				Name="VCWebDeploymentTool"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
-			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
-			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="Release"
 			IntermediateDirectory="Release"
 			ConfigurationType="2"
-			CharacterSet="2">
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;LOUDMOUTH_EXPORTS"
 				RuntimeLibrary="0"
-				UsePrecompiledHeader="3"
+				UsePrecompiledHeader="2"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="3"/>
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="3"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLinkerTool"
 				OutputFile="$(OutDir)/loudmouth.dll"
 				LinkIncremental="1"
 				ModuleDefinitionFile="loudmouth.def"
-				GenerateDebugInformation="TRUE"
+				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				ImportLibrary="$(OutDir)/loudmouth.lib"
-				TargetMachine="1"/>
+				TargetMachine="1"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCAppVerifierTool"
+			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"/>
+				Name="VCWebDeploymentTool"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
-			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
-			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 	</Configurations>
 	<References>
@@ -120,92 +184,120 @@
 		<Filter
 			Name="Source Files"
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
-			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
+			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
+			>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-connection.c">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-connection.c"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-debug.c">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-debug.c"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-error.c">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-error.c"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-message-handler.c">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-message-handler.c"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-message-node.c">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-message-node.c"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-message.c">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-message.c"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-parser.c">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-parser.c"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-proxy.c">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-proxy.c"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-sha.c">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-sha.c"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-ssl.c">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-ssl.c"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-utils.c">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-utils.c"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\loudmouth.def">
+				RelativePath="..\..\common\loudmouth\loudmouth\loudmouth.def"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
-			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
+			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
+			>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-connection.h">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-connection.h"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-debug.h">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-debug.h"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-error.h">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-error.h"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-internals.h">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-internals.h"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-message-handler.h">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-message-handler.h"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-message-node.h">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-message-node.h"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-message.h">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-message.h"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-parser.h">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-parser.h"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-proxy.h">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-proxy.h"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-sha.h">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-sha.h"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-ssl.h">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-ssl.h"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-utils.h">
+				RelativePath="..\..\common\loudmouth\loudmouth\lm-utils.h"
+				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\loudmouth.h">
+				RelativePath="..\..\common\loudmouth\loudmouth\loudmouth.h"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx"
-			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}">
+			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
+			>
 		</Filter>
 	</Files>
 	<Globals>
