base.conf properties-service.xml HippoProperty: Add a property   for the location to store crash dumps. super/jboss/files/data/crashdump: Default crash dump directory
CrashReportServlet servlet-info.xml: Add /crash-report for posting
  crash reports from the windows client.

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -212,6 +212,7 @@
 		<parameter name="targetdir">$basedir/jboss</parameter>
 		<parameter name="filesavedir">$targetdir/data/files</parameter>
 		<parameter name="luceneIndexDir">$targetdir/data/index</parameter>
+        <parameter name="crashdumpDir">$targetdir/data/crashdump</parameter>
 
 		<parameter name="jbossClusterEnabled">no</parameter>
 		<parameter name="jbossPartition">default</parameter>
@@ -289,9 +290,10 @@
 			   dest="deploy/dumbhippo.war"
 			   hot="yes"/> -->
 
-		<targetAttributes pattern="/data/files"	 ignore="yes" preserve="yes"/>
-		<targetAttributes pattern="/data/index"	 ignore="yes" preserve="yes"/>
-		<targetAttributes pattern="/data/statistics"   ignore="yes" preserve="yes"/>
+		<targetAttributes pattern="/data/crashdump"  ignore="yes" preserve="yes"/>
+		<targetAttributes pattern="/data/files"	     ignore="yes" preserve="yes"/>
+		<targetAttributes pattern="/data/index"	     ignore="yes" preserve="yes"/>
+		<targetAttributes pattern="/data/statistics" ignore="yes" preserve="yes"/>
 		<targetAttributes pattern="/data/**" ignore="yes"/>
 		<targetAttributes pattern="/log"   ignore="yes" preserve="yes"/> 
 		<targetAttributes pattern="/run/*" ignore="yes"/> 
